NIFI-15736 Added support of mime type application/x-xz for both compression and decompression in ModifyCompression and for decompression in CompressContent. (#11030)